# tslab_libao_library

./: configure.ac
src/: Makefile.am  ao_alsa.c  ao_macosx.c  audio_out.c
src/plugins/alsa/: ao_alsa.c
